--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   expandable: ^4.1.4
   http: ^0.12.2
   html: ^0.14.0+4
+  connectivity: ^0.4.9+5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
