--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,8 @@ dependencies:
   http: ^0.12.2
   html: ^0.14.0+4
   connectivity: ^0.4.9+5
-
+  flutter_html: ^1.0.2
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
