--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   html: ^0.14.0+4
   connectivity: ^0.4.9+5
   flutter_html: ^1.0.2
+  charts_flutter: ^0.9.0
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
