--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   connectivity: ^0.4.9+5
   flutter_html: ^1.0.2
   charts_flutter: ^0.9.0
+  url_launcher: ^5.7.8
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
